# Netology-homeworks

Old unsorted lessons/Cmake/01/: CMakeLists.txt  main.cpp
Old unsorted lessons/Cmake/02/: CMakeLists.txt  figure.h  main.cpp
Old unsorted lessons/Cmake/02/quadrilaterals/: Parallelogram.h  Quadrilaterals.cpp  Rectangle.cpp  Rhombus.cpp  Square.cpp
Old unsorted lessons/Cmake/02/triangles/: EquilateralTriangle.cpp  IsoTriangle.cpp  IsoTriangle.h  triangle.h
Old unsorted lessons/Exceptions and Error Handling/01/: 01.cpp
Old unsorted lessons/Exceptions and Error Handling/02/: 02.cpp  GeometryException.h  figure.cpp  figure.h
Old unsorted lessons/Homework Abstraction and Encapsulation/01/: CMakeLists.txt  main.cpp
Old unsorted lessons/Multi-file-projects-and-libraries/03/: CMakeLists.txt  figure.cpp  main.cpp
Old unsorted lessons/Multi-file-projects-and-libraries/03/quadrilaterals/: Parallelogram.cpp  Quadrilateral.h  Rectangle.h  Rhombus.h  Square.h
Old unsorted lessons/Multi-file-projects-and-libraries/03/triangles/: EquilateralTriangle.h  RightTriangle.h  triangle.cpp
Projects/Airport_Inspector/: CMakeLists.txt  database.cpp  database.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Projects/Project INI Parsec Files/: Info about INI project.txt  Old version of INI Project.txt  Teacher comments.txt
Projects/Race of creatures/main/: main.cpp
TOPIC - Cross-platform development with QT/Work with DB/: database.cpp  database.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
TOPIC - Data Bases/: SQL Homework 02.txt
TOPIC - Data Bases/SQL 04/: SQL04_(02,03,04)SELECT.sql  SQL04_01_INSERT.sql  SQL04_02.sql  SQL04_03.sql  SQL04_04.sql
TOPIC = MultiThread/1/: README.txt
Test/: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  udpworker.cpp  udpworker.h
(+122 files in other folders)
